--- a/km_to_miles/app/src/main/res/layout/activity_main2.xml
+++ b/km_to_miles/app/src/main/res/layout/activity_main2.xml
@@ -56,6 +56,7 @@
             android:text="@string/km"
             android:gravity="center"
             android:textStyle="bold"
+            android:layout_marginEnd="20dp"
             android:textColor="#5C3C95"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             />
